k8s/common/kind/IngressRoute.selfsigned.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: secure-selfsigned
  namespace: microadventures
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    secretName: microadventures-tls-selfsigned
